--- a/samples/dyna2/omnetpp.ini
+++ b/samples/dyna2/omnetpp.ini
@@ -31,7 +31,7 @@ breakpoints-enabled = yes
 [DisplayStrings]
 *.client[*] = "i=comp;p=,,m,10"
 *.server = "i=pc"
-*.switch = "i=switch2"
+*.switch = "i=switch2;q=queue"
 
 [Parameters]
 dyna.client[*].conn_ia_time =  exponential( 10s )
