--- a/src/nedc/Makefile.vc
+++ b/src/nedc/Makefile.vc
@@ -46,13 +46,13 @@ ebnf.tab.obj: jar_func.h ebnf.tab.h ebnf.tab.c
 	$(CXX) $(COPTS) /c /Tp ebnf.tab.c
 
 ebnf.tab.h: ebnf.y
-	$(YACC) -b ebnf -d ebnf.y
+	$(YACC:/=\) -b ebnf -d ebnf.y
 
 ebnf.tab.c: ebnf.y
-	$(YACC) -b ebnf -d ebnf.y
+	$(YACC:/=\) -b ebnf -d ebnf.y
 
 lex.yy.c: ebnf.lex
-	$(LEX) ebnf.lex
+	$(LEX:/=\) ebnf.lex
 
 jar.obj: jar_lib.h jar_func.h jar.c
 	$(CXX) $(COPTS) /c /Tp jar.c
