--- a/src/gned/Makefile.vc
+++ b/src/gned/Makefile.vc
@@ -20,8 +20,16 @@ LDFLAGS=$(LDFLAGS) /SUBSYSTEM:WINDOWS
 #
 # Local definitions
 #
-COPTS=$(CFLAGS) $(TK_CFLAGS)
+COPTS=$(CFLAGS) $(TK_CFLAGS) /I.
 OBJS = gned$(GNED_EMBED_SUFFIX).obj tklib.obj arrow.obj ebnf.tab.obj lex.yy.obj parsened.obj nedfile.obj
+
+#
+# Automatic rules
+#
+.SUFFIXES : .cc
+
+.cc.obj:
+	$(CXX) /Fo"$@" $(COPTS) /c /Tp $<
 
 #
 # Targets
@@ -39,24 +47,6 @@ gned.obj : gned.cc
 
 gned-e.obj : gned.cc tclcode.cc
 	$(CXX) /Fo"gned-e.obj" /DOMNETPP_BITMAP_PATH="\"$(OMNETPP_BITMAP_PATH)\"" $(COPTS) /c /Tp gned.cc
-
-tklib.obj : tklib.cc
-	$(CXX) $(COPTS) /c /Tp tklib.cc
-
-arrow.obj: arrow.cc
-	$(CXX) $(COPTS) /c /Tp arrow.cc
-
-parsened.obj: parsened.cc
-	$(CXX) $(COPTS) /c /Tp parsened.cc
-
-nedfile.obj: nedfile.cc
-	$(CXX) $(COPTS) /c /Tp nedfile.cc
-
-lex.yy.obj: lex.yy.cc
-	$(CXX) /I "." $(COPTS) /c /Tp lex.yy.cc
-
-ebnf.tab.obj: ebnf.tab.cc
-	$(CXX) $(COPTS) /c /Tp ebnf.tab.cc
 
 ebnf.tab.h: ebnf.y
 	$(YACC) -b ebnf -d ebnf.y
